[project]
name = "zmq_tubes"
version = "1.14.0"
description = "Wrapper for ZMQ communication."
readme = "README.md"
license = { text = "MIT" }
authors = [
     {name = "Martin Korbel", email = "mkorbel@alps.cz"},
]
keywords = ["zmq", "mqtt", "tubes", "zmq_tubes"]
classifiers = [
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.6"
dependencies = [
    "pyzmq"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
    "PyYAML>=5.4.1,<7.0",
    "pytest-asyncio; python_version >= '3.7'",
    "pytest-asyncio<0.19.0; python_version < '3.7'",
]

[project.urls]
homepage = "https://github.com/calcite/zmq_tubes"
repository = "https://github.com/calcite/zmq_tubes"
documentation = "https://github.com/calcite/zmq_tubes"

[tool.pdm.scripts]
zmqtube-monitor = "zmq_tubes.monitoring:main"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
